More responsivity issues fixed: -photo height set to max 70vh on phone, so it doesnt fill up the whole space in case the height is too small -overflow removed from the main photo container -Modal made responsive for small height screen

--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -10,6 +10,10 @@
   max-width: 90%;
   margin: 8rem auto;
 
+  @include mixins.respond(tab-land) {
+    margin-top: 3rem;
+  }
+
   @include mixins.respond(tab-port) {
     margin-top: 2rem;
     max-width: 100%;
