--- a/src/components/Article/ArticlePhotos.module.scss
+++ b/src/components/Article/ArticlePhotos.module.scss
@@ -15,13 +15,17 @@ $initial-max-width: 45rem;
   }
   @include mixins.respond(tab-port) {
     max-width: 100vw;
-    max-height: 70vh;
-    overflow: hidden;
   }
 
   &--lightbox {
     max-width: 100%;
     justify-content: center;
+    align-items: center;
+
+    @include mixins.respond(tab-land) {
+      max-width: 70%;
+      margin: 0 auto;
+    }
   }
 
   &__main-photo {
@@ -31,6 +35,7 @@ $initial-max-width: 45rem;
 
     @include mixins.respond(tab-port) {
       border-radius: 0;
+      max-height: 70vh;
       cursor: default;
     }
 
